edited the bower file

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "icons"
   ],
   "authors": [
-    "Emmanuel Chilaka <chilaka.devsq@olotusquare.co>",
+    "Emmanuel Chilaka <chilaka.devsq@olotusquare.co>"
   ],
   "license": "MIT",
   "homepage": "http://github.com/echilaka1/olotuicons",
